# OS_Classwork

Exam/ProcessA/src/: main.c
Exam/ProcessB/src/: main.c
Exam/ProcessC/src/: main.c
Exam_2/: CMakeLists.txt
Exam_2/src/: main.c
Exam_Practice/: CMakeLists.txt
Exam_Practice/process_2/src/: main.c
Exam_Practice/src/: main.c
HW_CPUSCHED/: CMakeLists.txt
HW_CPUSCHED/include/: functions.h
HW_CPUSCHED/src/: functions.c  main.c
Lab5/: CMakeLists.txt
Lab5/include/: functions.h
Lab5/src/: functions.c  main.c
Laboratory_1/: .clang-format
Laboratory_1/Excercise_1/: CMakeLists.txt
Laboratory_1/Excercise_1/include/: excercise1.h
Laboratory_1/Excercise_2/: CMakeLists.txt
Laboratory_1/Excercise_3/: CMakeLists.txt
Laboratory_1/Excercise_4/: CMakeLists.txt
Laboratory_3/bouncing_ball_PT2/: CMakeLists.txt
Laboratory_4/: CMakeLists.txt
Laboratory_4/src/: main.c
Project1/: CMakeLists.txt
Project1/include/: functions.h
Project1/inputs/: path_1.txt
Project1/outputs/: sleepFile.txt
Project1/src/: functions.c  main.c
Proyect1/: CMakeLists.txt
Proyect1/outputs/: posixFile.txt  sleepFile.txt
Proyect1/src/: functions.c  main.c
Threads/: CMakeLists.txt  Spreadsheet.ods
Threads/include/: functions.h
Threads/src/: functions.c  main.c
class_Example_exam_2/: CMakeLists.txt
class_Example_exam_2/src/: main.c
lab5_takeHome/: CMakeLists.txt
lab5_takeHome/src/: main.c
mmap_example/src/: main.c
thread_mutexes 2/: CMakeLists.txt
thread_mutexes 2/src/: main.c
threads_scheduling/: CMakeLists.txt
threads_scheduling/src/: main.c
(+39 files in other folders)
